

square.big_DATA = square.big/*.png
square.bigdir = $(datadir)/map-icons/square.big

square.big_incomming_DATA =
square.big_incommingdir = $(datadir)/map-icons/square.big/incomming

square.big_sightseeing_DATA = square.big/sightseeing/*.png
square.big_sightseeingdir = $(datadir)/map-icons/square.big/sightseeing

square.big_waypoint_DATA = square.big/waypoint/*.png
square.big_waypointdir = $(datadir)/map-icons/square.big/waypoint

square.big_waypoint_wpttemp_DATA = square.big/waypoint/wpttemp/*.png
square.big_waypoint_wpttempdir = $(datadir)/map-icons/square.big/waypoint/wpttemp

square.big_accommodation_DATA = square.big/accommodation/*.png
square.big_accommodationdir = $(datadir)/map-icons/square.big/accommodation

square.big_accommodation_hotel_DATA = square.big/accommodation/hotel/*.png
square.big_accommodation_hoteldir = $(datadir)/map-icons/square.big/accommodation/hotel

square.big_accommodation_camping_DATA =
square.big_accommodation_campingdir = $(datadir)/map-icons/square.big/accommodation/camping

square.big_wlan_DATA = square.big/wlan/*.png
square.big_wlandir = $(datadir)/map-icons/square.big/wlan

square.big_wlan_pay_DATA = square.big/wlan/pay/*.png
square.big_wlan_paydir = $(datadir)/map-icons/square.big/wlan/pay

square.big_geocache_DATA = square.big/geocache/*.png
square.big_geocachedir = $(datadir)/map-icons/square.big/geocache

square.big_geocache_geocache_multi_DATA = square.big/geocache/geocache_multi/*.png
square.big_geocache_geocache_multidir = $(datadir)/map-icons/square.big/geocache/geocache_multi

square.big_health_DATA =
square.big_healthdir = $(datadir)/map-icons/square.big/health

square.big_money_DATA = square.big/money/*.png
square.big_moneydir = $(datadir)/map-icons/square.big/money

square.big_money_atm_DATA =
square.big_money_atmdir = $(datadir)/map-icons/square.big/money/atm

square.big_money_bank_DATA =
square.big_money_bankdir = $(datadir)/map-icons/square.big/money/bank

square.big_nautical_DATA = square.big/nautical/*.png
square.big_nauticaldir = $(datadir)/map-icons/square.big/nautical

square.big_food_DATA = square.big/food/*.png
square.big_fooddir = $(datadir)/map-icons/square.big/food

square.big_food_restaurant_DATA = square.big/food/restaurant/*.png
square.big_food_restaurantdir = $(datadir)/map-icons/square.big/food/restaurant

square.big_food_fastfood_DATA = square.big/food/fastfood/*.png
square.big_food_fastfooddir = $(datadir)/map-icons/square.big/food/fastfood

square.big_food_machine_DATA =
square.big_food_machinedir = $(datadir)/map-icons/square.big/food/machine

square.big_food_snacks_DATA = square.big/food/snacks/*.png
square.big_food_snacksdir = $(datadir)/map-icons/square.big/food/snacks

square.big_recreation_DATA = square.big/recreation/*.png
square.big_recreationdir = $(datadir)/map-icons/square.big/recreation

square.big_sports_DATA = square.big/sports/*.png
square.big_sportsdir = $(datadir)/map-icons/square.big/sports

square.big_misc_DATA = square.big/misc/*.png
square.big_miscdir = $(datadir)/map-icons/square.big/misc

square.big_misc_landmark_DATA = square.big/misc/landmark/*.png
square.big_misc_landmarkdir = $(datadir)/map-icons/square.big/misc/landmark

square.big_misc_landmark_power_DATA =
square.big_misc_landmark_powerdir = $(datadir)/map-icons/square.big/misc/landmark/power

square.big_places_DATA = square.big/places/*.png
square.big_placesdir = $(datadir)/map-icons/square.big/places

square.big_places_settlement_DATA = square.big/places/settlement/*.png
square.big_places_settlementdir = $(datadir)/map-icons/square.big/places/settlement

square.big_vehicle_DATA = square.big/vehicle/*.png
square.big_vehicledir = $(datadir)/map-icons/square.big/vehicle

square.big_vehicle_car_rental_DATA = square.big/vehicle/car_rental/*.png
square.big_vehicle_car_rentaldir = $(datadir)/map-icons/square.big/vehicle/car_rental

square.big_vehicle_parking_DATA = square.big/vehicle/parking/*.png
square.big_vehicle_parkingdir = $(datadir)/map-icons/square.big/vehicle/parking

square.big_vehicle_restrictions_DATA = square.big/vehicle/restrictions/*.png
square.big_vehicle_restrictionsdir = $(datadir)/map-icons/square.big/vehicle/restrictions

square.big_vehicle_restrictions_speed_DATA = square.big/vehicle/restrictions/speed/*.png
square.big_vehicle_restrictions_speeddir = $(datadir)/map-icons/square.big/vehicle/restrictions/speed

square.big_vehicle_fuel_station_DATA = square.big/vehicle/fuel_station/*.png
square.big_vehicle_fuel_stationdir = $(datadir)/map-icons/square.big/vehicle/fuel_station

square.big_education_DATA = square.big/education/*.png
square.big_educationdir = $(datadir)/map-icons/square.big/education

square.big_education_school_DATA =
square.big_education_schooldir = $(datadir)/map-icons/square.big/education/school

square.big_shopping_DATA = square.big/shopping/*.png
square.big_shoppingdir = $(datadir)/map-icons/square.big/shopping

square.big_shopping_furniture_DATA =
square.big_shopping_furnituredir = $(datadir)/map-icons/square.big/shopping/furniture

square.big_shopping_groceries_DATA =
square.big_shopping_groceriesdir = $(datadir)/map-icons/square.big/shopping/groceries

square.big_shopping_sports_DATA =
square.big_shopping_sportsdir = $(datadir)/map-icons/square.big/shopping/sports

square.big_shopping_vehicle_DATA =
square.big_shopping_vehicledir = $(datadir)/map-icons/square.big/shopping/vehicle

square.big_shopping_machine_DATA =
square.big_shopping_machinedir = $(datadir)/map-icons/square.big/shopping/machine

square.big_shopping_clothing_DATA =
square.big_shopping_clothingdir = $(datadir)/map-icons/square.big/shopping/clothing

square.big_shopping_supermarket_DATA = square.big/shopping/supermarket/*.png
square.big_shopping_supermarketdir = $(datadir)/map-icons/square.big/shopping/supermarket

square.big_shopping_media_DATA =
square.big_shopping_mediadir = $(datadir)/map-icons/square.big/shopping/media

square.big_shopping_diy_store_DATA = square.big/shopping/diy_store/*.png
square.big_shopping_diy_storedir = $(datadir)/map-icons/square.big/shopping/diy_store

square.big_shopping_rental_DATA =
square.big_shopping_rentaldir = $(datadir)/map-icons/square.big/shopping/rental

square.big_shopping_games_DATA =
square.big_shopping_gamesdir = $(datadir)/map-icons/square.big/shopping/games

square.big_public_DATA = square.big/public/*.png
square.big_publicdir = $(datadir)/map-icons/square.big/public

square.big_public_inspecting_authority_DATA =
square.big_public_inspecting_authoritydir = $(datadir)/map-icons/square.big/public/inspecting-authority

square.big_public_recycling_DATA =
square.big_public_recyclingdir = $(datadir)/map-icons/square.big/public/recycling

square.big_public_recycling_container_DATA =
square.big_public_recycling_containerdir = $(datadir)/map-icons/square.big/public/recycling/container

square.big_public_administration_DATA =
square.big_public_administrationdir = $(datadir)/map-icons/square.big/public/administration

square.big_people_DATA = square.big/people/*.png
square.big_peopledir = $(datadir)/map-icons/square.big/people

square.big_people_friendsd_DATA = square.big/people/friendsd/*.png
square.big_people_friendsddir = $(datadir)/map-icons/square.big/people/friendsd

square.big_people_developer_DATA = square.big/people/developer/*.png
square.big_people_developerdir = $(datadir)/map-icons/square.big/people/developer

square.big_religion_DATA = square.big/religion/*.png
square.big_religiondir = $(datadir)/map-icons/square.big/religion

square.big_religion_church_DATA =
square.big_religion_churchdir = $(datadir)/map-icons/square.big/religion/church

square.big_transport_DATA = square.big/transport/*.png
square.big_transportdir = $(datadir)/map-icons/square.big/transport

square.big_transport_ferry_DATA =
square.big_transport_ferrydir = $(datadir)/map-icons/square.big/transport/ferry

square.big_transport_bridge_DATA = square.big/transport/bridge/*.png
square.big_transport_bridgedir = $(datadir)/map-icons/square.big/transport/bridge

square.big_transport_track_DATA = square.big/transport/track/*.png
square.big_transport_trackdir = $(datadir)/map-icons/square.big/transport/track


square.small_DATA = square.small/*.png
square.smalldir = $(datadir)/map-icons/square.small

square.small_incomming_DATA =
square.small_incommingdir = $(datadir)/map-icons/square.small/incomming

square.small_sightseeing_DATA = square.small/sightseeing/*.png
square.small_sightseeingdir = $(datadir)/map-icons/square.small/sightseeing

square.small_waypoint_DATA = square.small/waypoint/*.png
square.small_waypointdir = $(datadir)/map-icons/square.small/waypoint

square.small_waypoint_wpttemp_DATA = square.small/waypoint/wpttemp/*.png
square.small_waypoint_wpttempdir = $(datadir)/map-icons/square.small/waypoint/wpttemp

square.small_accommodation_DATA = square.small/accommodation/*.png
square.small_accommodationdir = $(datadir)/map-icons/square.small/accommodation

square.small_accommodation_hotel_DATA = square.small/accommodation/hotel/*.png
square.small_accommodation_hoteldir = $(datadir)/map-icons/square.small/accommodation/hotel

square.small_accommodation_camping_DATA =
square.small_accommodation_campingdir = $(datadir)/map-icons/square.small/accommodation/camping

square.small_wlan_DATA = square.small/wlan/*.png
square.small_wlandir = $(datadir)/map-icons/square.small/wlan

square.small_wlan_pay_DATA = square.small/wlan/pay/*.png
square.small_wlan_paydir = $(datadir)/map-icons/square.small/wlan/pay

square.small_geocache_DATA = square.small/geocache/*.png
square.small_geocachedir = $(datadir)/map-icons/square.small/geocache

square.small_geocache_geocache_multi_DATA = square.small/geocache/geocache_multi/*.png
square.small_geocache_geocache_multidir = $(datadir)/map-icons/square.small/geocache/geocache_multi

square.small_health_DATA =
square.small_healthdir = $(datadir)/map-icons/square.small/health

square.small_money_DATA = square.small/money/*.png
square.small_moneydir = $(datadir)/map-icons/square.small/money

square.small_money_atm_DATA =
square.small_money_atmdir = $(datadir)/map-icons/square.small/money/atm

square.small_money_bank_DATA =
square.small_money_bankdir = $(datadir)/map-icons/square.small/money/bank

square.small_nautical_DATA = square.small/nautical/*.png
square.small_nauticaldir = $(datadir)/map-icons/square.small/nautical

square.small_food_DATA = square.small/food/*.png
square.small_fooddir = $(datadir)/map-icons/square.small/food

square.small_food_restaurant_DATA =
square.small_food_restaurantdir = $(datadir)/map-icons/square.small/food/restaurant

square.small_food_fastfood_DATA = square.small/food/fastfood/*.png
square.small_food_fastfooddir = $(datadir)/map-icons/square.small/food/fastfood

square.small_food_machine_DATA =
square.small_food_machinedir = $(datadir)/map-icons/square.small/food/machine

square.small_food_snacks_DATA =
square.small_food_snacksdir = $(datadir)/map-icons/square.small/food/snacks

square.small_recreation_DATA = square.small/recreation/*.png
square.small_recreationdir = $(datadir)/map-icons/square.small/recreation

square.small_sports_DATA = square.small/sports/*.png
square.small_sportsdir = $(datadir)/map-icons/square.small/sports

square.small_misc_DATA = square.small/misc/*.png
square.small_miscdir = $(datadir)/map-icons/square.small/misc

square.small_misc_landmark_DATA = square.small/misc/landmark/*.png
square.small_misc_landmarkdir = $(datadir)/map-icons/square.small/misc/landmark

square.small_misc_landmark_power_DATA =
square.small_misc_landmark_powerdir = $(datadir)/map-icons/square.small/misc/landmark/power

square.small_places_DATA = square.small/places/*.png
square.small_placesdir = $(datadir)/map-icons/square.small/places

square.small_places_settlement_DATA = square.small/places/settlement/*.png
square.small_places_settlementdir = $(datadir)/map-icons/square.small/places/settlement

square.small_vehicle_DATA = square.small/vehicle/*.png
square.small_vehicledir = $(datadir)/map-icons/square.small/vehicle

square.small_vehicle_car_rental_DATA = square.small/vehicle/car_rental/*.png
square.small_vehicle_car_rentaldir = $(datadir)/map-icons/square.small/vehicle/car_rental

square.small_vehicle_parking_DATA = square.small/vehicle/parking/*.png
square.small_vehicle_parkingdir = $(datadir)/map-icons/square.small/vehicle/parking

square.small_vehicle_restrictions_DATA = square.small/vehicle/restrictions/*.png
square.small_vehicle_restrictionsdir = $(datadir)/map-icons/square.small/vehicle/restrictions

square.small_vehicle_restrictions_speed_DATA = square.small/vehicle/restrictions/speed/*.png
square.small_vehicle_restrictions_speeddir = $(datadir)/map-icons/square.small/vehicle/restrictions/speed

square.small_vehicle_fuel_station_DATA = square.small/vehicle/fuel_station/*.png
square.small_vehicle_fuel_stationdir = $(datadir)/map-icons/square.small/vehicle/fuel_station

square.small_education_DATA = square.small/education/*.png
square.small_educationdir = $(datadir)/map-icons/square.small/education

square.small_education_school_DATA =
square.small_education_schooldir = $(datadir)/map-icons/square.small/education/school

square.small_shopping_DATA = square.small/shopping/*.png
square.small_shoppingdir = $(datadir)/map-icons/square.small/shopping

square.small_shopping_furniture_DATA =
square.small_shopping_furnituredir = $(datadir)/map-icons/square.small/shopping/furniture

square.small_shopping_groceries_DATA =
square.small_shopping_groceriesdir = $(datadir)/map-icons/square.small/shopping/groceries

square.small_shopping_sports_DATA =
square.small_shopping_sportsdir = $(datadir)/map-icons/square.small/shopping/sports

square.small_shopping_vehicle_DATA =
square.small_shopping_vehicledir = $(datadir)/map-icons/square.small/shopping/vehicle

square.small_shopping_machine_DATA =
square.small_shopping_machinedir = $(datadir)/map-icons/square.small/shopping/machine

square.small_shopping_supermarket_DATA = square.small/shopping/supermarket/*.png
square.small_shopping_supermarketdir = $(datadir)/map-icons/square.small/shopping/supermarket

square.small_shopping_media_DATA =
square.small_shopping_mediadir = $(datadir)/map-icons/square.small/shopping/media

square.small_shopping_diy_store_DATA = square.small/shopping/diy_store/*.png
square.small_shopping_diy_storedir = $(datadir)/map-icons/square.small/shopping/diy_store

square.small_shopping_rental_DATA =
square.small_shopping_rentaldir = $(datadir)/map-icons/square.small/shopping/rental

square.small_shopping_games_DATA =
square.small_shopping_gamesdir = $(datadir)/map-icons/square.small/shopping/games

square.small_public_DATA = square.small/public/*.png
square.small_publicdir = $(datadir)/map-icons/square.small/public

square.small_public_inspecting_authority_DATA =
square.small_public_inspecting_authoritydir = $(datadir)/map-icons/square.small/public/inspecting-authority

square.small_public_recycling_DATA =
square.small_public_recyclingdir = $(datadir)/map-icons/square.small/public/recycling

square.small_public_recycling_container_DATA =
square.small_public_recycling_containerdir = $(datadir)/map-icons/square.small/public/recycling/container

square.small_public_administration_DATA =
square.small_public_administrationdir = $(datadir)/map-icons/square.small/public/administration

square.small_people_DATA = square.small/people/*.png
square.small_peopledir = $(datadir)/map-icons/square.small/people

square.small_people_friendsd_DATA = square.small/people/friendsd/*.png
square.small_people_friendsddir = $(datadir)/map-icons/square.small/people/friendsd

square.small_people_developer_DATA = square.small/people/developer/*.png
square.small_people_developerdir = $(datadir)/map-icons/square.small/people/developer

square.small_religion_DATA = square.small/religion/*.png
square.small_religiondir = $(datadir)/map-icons/square.small/religion

square.small_religion_church_DATA =
square.small_religion_churchdir = $(datadir)/map-icons/square.small/religion/church

square.small_transport_DATA = square.small/transport/*.png
square.small_transportdir = $(datadir)/map-icons/square.small/transport

square.small_transport_ferry_DATA =
square.small_transport_ferrydir = $(datadir)/map-icons/square.small/transport/ferry

square.small_transport_bridge_DATA = square.small/transport/bridge/*.png
square.small_transport_bridgedir = $(datadir)/map-icons/square.small/transport/bridge

square.small_transport_track_DATA =
square.small_transport_trackdir = $(datadir)/map-icons/square.small/transport/track


svg_DATA = svg/*.svg
svgdir = $(datadir)/map-icons/svg

svg_incomming_DATA = svg/incomming/*.svg
svg_incommingdir = $(datadir)/map-icons/svg/incomming

svg_sightseeing_DATA = svg/sightseeing/*.svg
svg_sightseeingdir = $(datadir)/map-icons/svg/sightseeing

svg_waypoint_DATA = svg/waypoint/*.svg
svg_waypointdir = $(datadir)/map-icons/svg/waypoint

svg_accommodation_DATA = svg/accommodation/*.svg
svg_accommodationdir = $(datadir)/map-icons/svg/accommodation

svg_accommodation_camping_DATA = svg/accommodation/camping/*.svg
svg_accommodation_campingdir = $(datadir)/map-icons/svg/accommodation/camping

svg_wlan_DATA =
svg_wlandir = $(datadir)/map-icons/svg/wlan

svg_geocache_DATA =
svg_geocachedir = $(datadir)/map-icons/svg/geocache

svg_health_DATA = svg/health/*.png svg/health/*.svg
svg_healthdir = $(datadir)/map-icons/svg/health

svg_money_DATA =
svg_moneydir = $(datadir)/map-icons/svg/money

svg_nautical_DATA =
svg_nauticaldir = $(datadir)/map-icons/svg/nautical

svg_food_DATA = svg/food/*.svg
svg_fooddir = $(datadir)/map-icons/svg/food

svg_recreation_DATA = svg/recreation/*.svg
svg_recreationdir = $(datadir)/map-icons/svg/recreation

svg_sports_DATA = svg/sports/*.svg
svg_sportsdir = $(datadir)/map-icons/svg/sports

svg_misc_DATA = svg/misc/*.svg
svg_miscdir = $(datadir)/map-icons/svg/misc

svg_misc_landmark_DATA = svg/misc/landmark/*.svg
svg_misc_landmarkdir = $(datadir)/map-icons/svg/misc/landmark

svg_places_DATA =
svg_placesdir = $(datadir)/map-icons/svg/places

svg_vehicle_DATA = svg/vehicle/*.svg
svg_vehicledir = $(datadir)/map-icons/svg/vehicle

svg_vehicle_restrictions_DATA = svg/vehicle/restrictions/*.svg
svg_vehicle_restrictionsdir = $(datadir)/map-icons/svg/vehicle/restrictions

svg_vehicle_restrictions_speed_DATA =
svg_vehicle_restrictions_speeddir = $(datadir)/map-icons/svg/vehicle/restrictions/speed

svg_education_DATA = svg/education/*.svg
svg_educationdir = $(datadir)/map-icons/svg/education

svg_education_school_DATA = svg/education/school/*.svg
svg_education_schooldir = $(datadir)/map-icons/svg/education/school

svg_shopping_DATA = svg/shopping/*.svg
svg_shoppingdir = $(datadir)/map-icons/svg/shopping

svg_shopping_rental_DATA = svg/shopping/rental/*.svg
svg_shopping_rentaldir = $(datadir)/map-icons/svg/shopping/rental

svg_public_DATA = svg/public/*.svg
svg_publicdir = $(datadir)/map-icons/svg/public

svg_public_recycling_DATA = svg/public/recycling/*.svg
svg_public_recyclingdir = $(datadir)/map-icons/svg/public/recycling

svg_people_DATA = svg/people/*.svg
svg_peopledir = $(datadir)/map-icons/svg/people

svg_religion_DATA = svg/religion/*.svg
svg_religiondir = $(datadir)/map-icons/svg/religion

svg_religion_church_DATA = svg/religion/church/*.svg
svg_religion_churchdir = $(datadir)/map-icons/svg/religion/church

svg_transport_DATA = svg/transport/*.svg
svg_transportdir = $(datadir)/map-icons/svg/transport

svg_transport_bridge_DATA = svg/transport/bridge/*.svg
svg_transport_bridgedir = $(datadir)/map-icons/svg/transport/bridge


japan_DATA = japan/*.svg
japandir = $(datadir)/map-icons/japan

japan_incomming_DATA = japan/incomming/*.svg
japan_incommingdir = $(datadir)/map-icons/japan/incomming

japan_sightseeing_DATA = japan/sightseeing/*.svg
japan_sightseeingdir = $(datadir)/map-icons/japan/sightseeing

japan_waypoint_DATA =
japan_waypointdir = $(datadir)/map-icons/japan/waypoint

japan_accommodation_DATA =
japan_accommodationdir = $(datadir)/map-icons/japan/accommodation

japan_wlan_DATA =
japan_wlandir = $(datadir)/map-icons/japan/wlan

japan_accomodation_DATA =
japan_accomodationdir = $(datadir)/map-icons/japan/accomodation

japan_geocache_DATA =
japan_geocachedir = $(datadir)/map-icons/japan/geocache

japan_health_DATA = japan/health/*.svg
japan_healthdir = $(datadir)/map-icons/japan/health

japan_money_DATA =
japan_moneydir = $(datadir)/map-icons/japan/money

japan_nautical_DATA =
japan_nauticaldir = $(datadir)/map-icons/japan/nautical

japan_food_DATA =
japan_fooddir = $(datadir)/map-icons/japan/food

japan_recreation_DATA =
japan_recreationdir = $(datadir)/map-icons/japan/recreation

japan_sports_DATA =
japan_sportsdir = $(datadir)/map-icons/japan/sports

japan_misc_DATA =
japan_miscdir = $(datadir)/map-icons/japan/misc

japan_misc_landmark_DATA = japan/misc/landmark/*.svg
japan_misc_landmarkdir = $(datadir)/map-icons/japan/misc/landmark

japan_places_DATA =
japan_placesdir = $(datadir)/map-icons/japan/places

japan_vehicle_DATA =
japan_vehicledir = $(datadir)/map-icons/japan/vehicle

japan_education_DATA = japan/education/*.svg
japan_educationdir = $(datadir)/map-icons/japan/education

japan_education_school_DATA = japan/education/school/*.svg
japan_education_schooldir = $(datadir)/map-icons/japan/education/school

japan_shopping_DATA =
japan_shoppingdir = $(datadir)/map-icons/japan/shopping

japan_shopping_rental_DATA = japan/shopping/rental/*.svg
japan_shopping_rentaldir = $(datadir)/map-icons/japan/shopping/rental

japan_public_DATA = japan/public/*.svg
japan_publicdir = $(datadir)/map-icons/japan/public

japan_public_administration_DATA = japan/public/administration/*.svg
japan_public_administrationdir = $(datadir)/map-icons/japan/public/administration

japan_people_DATA =
japan_peopledir = $(datadir)/map-icons/japan/people

japan_religion_DATA = japan/religion/*.svg
japan_religiondir = $(datadir)/map-icons/japan/religion

japan_transport_DATA =
japan_transportdir = $(datadir)/map-icons/japan/transport

japan_transport_ferry_DATA = japan/transport/ferry/*.svg
japan_transport_ferrydir = $(datadir)/map-icons/japan/transport/ferry


classic.small_DATA = classic.small/*.png
classic.smalldir = $(datadir)/map-icons/classic.small

classic.small_incomming_DATA = classic.small/incomming/*.png
classic.small_incommingdir = $(datadir)/map-icons/classic.small/incomming

classic.small_sightseeing_DATA = classic.small/sightseeing/*.png
classic.small_sightseeingdir = $(datadir)/map-icons/classic.small/sightseeing

classic.small_waypoint_DATA = classic.small/waypoint/*.png
classic.small_waypointdir = $(datadir)/map-icons/classic.small/waypoint

classic.small_waypoint_wpttemp_DATA = classic.small/waypoint/wpttemp/*.png
classic.small_waypoint_wpttempdir = $(datadir)/map-icons/classic.small/waypoint/wpttemp

classic.small_accommodation_DATA = classic.small/accommodation/*.png
classic.small_accommodationdir = $(datadir)/map-icons/classic.small/accommodation

classic.small_accommodation_camping_DATA = classic.small/accommodation/camping/*.png
classic.small_accommodation_campingdir = $(datadir)/map-icons/classic.small/accommodation/camping

classic.small_wlan_DATA = classic.small/wlan/*.png
classic.small_wlandir = $(datadir)/map-icons/classic.small/wlan

classic.small_wlan_pay_DATA = classic.small/wlan/pay/*.png
classic.small_wlan_paydir = $(datadir)/map-icons/classic.small/wlan/pay

classic.small_geocache_DATA =
classic.small_geocachedir = $(datadir)/map-icons/classic.small/geocache

classic.small_health_DATA = classic.small/health/*.png
classic.small_healthdir = $(datadir)/map-icons/classic.small/health

classic.small_money_DATA = classic.small/money/*.png
classic.small_moneydir = $(datadir)/map-icons/classic.small/money

classic.small_money_bank_DATA = classic.small/money/bank/*.png
classic.small_money_bankdir = $(datadir)/map-icons/classic.small/money/bank

classic.small_nautical_DATA = classic.small/nautical/*.png
classic.small_nauticaldir = $(datadir)/map-icons/classic.small/nautical

classic.small_food_DATA = classic.small/food/*.png
classic.small_fooddir = $(datadir)/map-icons/classic.small/food

classic.small_food_restaurant_DATA = classic.small/food/restaurant/*.png
classic.small_food_restaurantdir = $(datadir)/map-icons/classic.small/food/restaurant

classic.small_food_fastfood_DATA = classic.small/food/fastfood/*.png
classic.small_food_fastfooddir = $(datadir)/map-icons/classic.small/food/fastfood

classic.small_food_snacks_DATA = classic.small/food/snacks/*.png
classic.small_food_snacksdir = $(datadir)/map-icons/classic.small/food/snacks

classic.small_recreation_DATA = classic.small/recreation/*.png
classic.small_recreationdir = $(datadir)/map-icons/classic.small/recreation

classic.small_sports_DATA = classic.small/sports/*.png
classic.small_sportsdir = $(datadir)/map-icons/classic.small/sports

classic.small_misc_DATA = classic.small/misc/*.png
classic.small_miscdir = $(datadir)/map-icons/classic.small/misc

classic.small_misc_landmark_DATA = classic.small/misc/landmark/*.png
classic.small_misc_landmarkdir = $(datadir)/map-icons/classic.small/misc/landmark

classic.small_misc_landmark_power_DATA = classic.small/misc/landmark/power/*.png
classic.small_misc_landmark_powerdir = $(datadir)/map-icons/classic.small/misc/landmark/power

classic.small_misc_information_DATA =
classic.small_misc_informationdir = $(datadir)/map-icons/classic.small/misc/information

classic.small_places_DATA = classic.small/places/*.png
classic.small_placesdir = $(datadir)/map-icons/classic.small/places

classic.small_places_settlement_DATA = classic.small/places/settlement/*.png
classic.small_places_settlementdir = $(datadir)/map-icons/classic.small/places/settlement

classic.small_vehicle_DATA = classic.small/vehicle/*.png
classic.small_vehicledir = $(datadir)/map-icons/classic.small/vehicle

classic.small_vehicle_shield_DATA = classic.small/vehicle/shield/*.png
classic.small_vehicle_shielddir = $(datadir)/map-icons/classic.small/vehicle/shield

classic.small_vehicle_car_rental_DATA = classic.small/vehicle/car_rental/*.png
classic.small_vehicle_car_rentaldir = $(datadir)/map-icons/classic.small/vehicle/car_rental

classic.small_vehicle_parking_DATA = classic.small/vehicle/parking/*.png
classic.small_vehicle_parkingdir = $(datadir)/map-icons/classic.small/vehicle/parking

classic.small_vehicle_restrictions_DATA = classic.small/vehicle/restrictions/*.png
classic.small_vehicle_restrictionsdir = $(datadir)/map-icons/classic.small/vehicle/restrictions

classic.small_vehicle_restrictions_speed_DATA = classic.small/vehicle/restrictions/speed/*.png
classic.small_vehicle_restrictions_speeddir = $(datadir)/map-icons/classic.small/vehicle/restrictions/speed

classic.small_vehicle_fuel_station_DATA = classic.small/vehicle/fuel_station/*.png
classic.small_vehicle_fuel_stationdir = $(datadir)/map-icons/classic.small/vehicle/fuel_station

classic.small_education_DATA = classic.small/education/*.png
classic.small_educationdir = $(datadir)/map-icons/classic.small/education

classic.small_education_school_DATA = classic.small/education/school/*.png
classic.small_education_schooldir = $(datadir)/map-icons/classic.small/education/school

classic.small_shopping_DATA = classic.small/shopping/*.png
classic.small_shoppingdir = $(datadir)/map-icons/classic.small/shopping

classic.small_shopping_groceries_DATA = classic.small/shopping/groceries/*.png
classic.small_shopping_groceriesdir = $(datadir)/map-icons/classic.small/shopping/groceries

classic.small_shopping_supermarket_DATA = classic.small/shopping/supermarket/*.png
classic.small_shopping_supermarketdir = $(datadir)/map-icons/classic.small/shopping/supermarket

classic.small_shopping_rental_DATA = classic.small/shopping/rental/*.png
classic.small_shopping_rentaldir = $(datadir)/map-icons/classic.small/shopping/rental

classic.small_public_DATA = classic.small/public/*.png
classic.small_publicdir = $(datadir)/map-icons/classic.small/public

classic.small_public_recycling_DATA = classic.small/public/recycling/*.png
classic.small_public_recyclingdir = $(datadir)/map-icons/classic.small/public/recycling

classic.small_public_administration_DATA = classic.small/public/administration/*.png
classic.small_public_administrationdir = $(datadir)/map-icons/classic.small/public/administration

classic.small_people_DATA = classic.small/people/*.png
classic.small_peopledir = $(datadir)/map-icons/classic.small/people

classic.small_religion_DATA = classic.small/religion/*.png
classic.small_religiondir = $(datadir)/map-icons/classic.small/religion

classic.small_religion_church_DATA = classic.small/religion/church/*.png
classic.small_religion_churchdir = $(datadir)/map-icons/classic.small/religion/church

classic.small_transport_DATA = classic.small/transport/*.png
classic.small_transportdir = $(datadir)/map-icons/classic.small/transport

classic.small_transport_ferry_DATA =
classic.small_transport_ferrydir = $(datadir)/map-icons/classic.small/transport/ferry

classic.small_transport_bridge_DATA = classic.small/transport/bridge/*.png
classic.small_transport_bridgedir = $(datadir)/map-icons/classic.small/transport/bridge

classic.small_transport_track_DATA = classic.small/transport/track/*.png
classic.small_transport_trackdir = $(datadir)/map-icons/classic.small/transport/track


classic.big_DATA = classic.big/*.png
classic.bigdir = $(datadir)/map-icons/classic.big

classic.big_incomming_DATA =
classic.big_incommingdir = $(datadir)/map-icons/classic.big/incomming

classic.big_sightseeing_DATA = classic.big/sightseeing/*.png
classic.big_sightseeingdir = $(datadir)/map-icons/classic.big/sightseeing

classic.big_waypoint_DATA = classic.big/waypoint/*.png
classic.big_waypointdir = $(datadir)/map-icons/classic.big/waypoint

classic.big_waypoint_wpttemp_DATA = classic.big/waypoint/wpttemp/*.png
classic.big_waypoint_wpttempdir = $(datadir)/map-icons/classic.big/waypoint/wpttemp

classic.big_accommodation_DATA = classic.big/accommodation/*.png
classic.big_accommodationdir = $(datadir)/map-icons/classic.big/accommodation

classic.big_accommodation_camping_DATA = classic.big/accommodation/camping/*.png
classic.big_accommodation_campingdir = $(datadir)/map-icons/classic.big/accommodation/camping

classic.big_wlan_DATA = classic.big/wlan/*.png
classic.big_wlandir = $(datadir)/map-icons/classic.big/wlan

classic.big_wlan_pay_DATA = classic.big/wlan/pay/*.png
classic.big_wlan_paydir = $(datadir)/map-icons/classic.big/wlan/pay

classic.big_geocache_DATA =
classic.big_geocachedir = $(datadir)/map-icons/classic.big/geocache

classic.big_health_DATA = classic.big/health/*.png
classic.big_healthdir = $(datadir)/map-icons/classic.big/health

classic.big_money_DATA = classic.big/money/*.png
classic.big_moneydir = $(datadir)/map-icons/classic.big/money

classic.big_money_bank_DATA = classic.big/money/bank/*.png
classic.big_money_bankdir = $(datadir)/map-icons/classic.big/money/bank

classic.big_nautical_DATA = classic.big/nautical/*.png
classic.big_nauticaldir = $(datadir)/map-icons/classic.big/nautical

classic.big_food_DATA = classic.big/food/*.png
classic.big_fooddir = $(datadir)/map-icons/classic.big/food

classic.big_food_restaurant_DATA = classic.big/food/restaurant/*.png
classic.big_food_restaurantdir = $(datadir)/map-icons/classic.big/food/restaurant

classic.big_food_fastfood_DATA = classic.big/food/fastfood/*.png
classic.big_food_fastfooddir = $(datadir)/map-icons/classic.big/food/fastfood

classic.big_food_snacks_DATA = classic.big/food/snacks/*.png
classic.big_food_snacksdir = $(datadir)/map-icons/classic.big/food/snacks

classic.big_recreation_DATA = classic.big/recreation/*.png
classic.big_recreationdir = $(datadir)/map-icons/classic.big/recreation

classic.big_sports_DATA = classic.big/sports/*.png
classic.big_sportsdir = $(datadir)/map-icons/classic.big/sports

classic.big_misc_DATA = classic.big/misc/*.png
classic.big_miscdir = $(datadir)/map-icons/classic.big/misc

classic.big_misc_landmark_DATA = classic.big/misc/landmark/*.png
classic.big_misc_landmarkdir = $(datadir)/map-icons/classic.big/misc/landmark

classic.big_misc_landmark_power_DATA =
classic.big_misc_landmark_powerdir = $(datadir)/map-icons/classic.big/misc/landmark/power

classic.big_misc_information_DATA =
classic.big_misc_informationdir = $(datadir)/map-icons/classic.big/misc/information

classic.big_places_DATA = classic.big/places/*.png
classic.big_placesdir = $(datadir)/map-icons/classic.big/places

classic.big_places_settlement_DATA = classic.big/places/settlement/*.png
classic.big_places_settlementdir = $(datadir)/map-icons/classic.big/places/settlement

classic.big_vehicle_DATA = classic.big/vehicle/*.png
classic.big_vehicledir = $(datadir)/map-icons/classic.big/vehicle

classic.big_vehicle_car_rental_DATA = classic.big/vehicle/car_rental/*.png
classic.big_vehicle_car_rentaldir = $(datadir)/map-icons/classic.big/vehicle/car_rental

classic.big_vehicle_parking_DATA = classic.big/vehicle/parking/*.png
classic.big_vehicle_parkingdir = $(datadir)/map-icons/classic.big/vehicle/parking

classic.big_vehicle_restrictions_DATA = classic.big/vehicle/restrictions/*.png
classic.big_vehicle_restrictionsdir = $(datadir)/map-icons/classic.big/vehicle/restrictions

classic.big_vehicle_restrictions_speed_DATA = classic.big/vehicle/restrictions/speed/*.png
classic.big_vehicle_restrictions_speeddir = $(datadir)/map-icons/classic.big/vehicle/restrictions/speed

classic.big_vehicle_fuel_station_DATA = classic.big/vehicle/fuel_station/*.png
classic.big_vehicle_fuel_stationdir = $(datadir)/map-icons/classic.big/vehicle/fuel_station

classic.big_education_DATA = classic.big/education/*.png
classic.big_educationdir = $(datadir)/map-icons/classic.big/education

classic.big_education_school_DATA = classic.big/education/school/*.png
classic.big_education_schooldir = $(datadir)/map-icons/classic.big/education/school

classic.big_shopping_DATA = classic.big/shopping/*.png
classic.big_shoppingdir = $(datadir)/map-icons/classic.big/shopping

classic.big_shopping_groceries_DATA = classic.big/shopping/groceries/*.png
classic.big_shopping_groceriesdir = $(datadir)/map-icons/classic.big/shopping/groceries

classic.big_shopping_supermarket_DATA = classic.big/shopping/supermarket/*.png
classic.big_shopping_supermarketdir = $(datadir)/map-icons/classic.big/shopping/supermarket

classic.big_shopping_rental_DATA =
classic.big_shopping_rentaldir = $(datadir)/map-icons/classic.big/shopping/rental

classic.big_public_DATA = classic.big/public/*.png
classic.big_publicdir = $(datadir)/map-icons/classic.big/public

classic.big_public_recycling_DATA =
classic.big_public_recyclingdir = $(datadir)/map-icons/classic.big/public/recycling

classic.big_public_administration_DATA =
classic.big_public_administrationdir = $(datadir)/map-icons/classic.big/public/administration

classic.big_people_DATA = classic.big/people/*.png
classic.big_peopledir = $(datadir)/map-icons/classic.big/people

classic.big_religion_DATA = classic.big/religion/*.png
classic.big_religiondir = $(datadir)/map-icons/classic.big/religion

classic.big_religion_church_DATA =
classic.big_religion_churchdir = $(datadir)/map-icons/classic.big/religion/church

classic.big_transport_DATA = classic.big/transport/*.png
classic.big_transportdir = $(datadir)/map-icons/classic.big/transport

classic.big_transport_ferry_DATA = classic.big/transport/ferry/*.png
classic.big_transport_ferrydir = $(datadir)/map-icons/classic.big/transport/ferry

classic.big_transport_bridge_DATA = classic.big/transport/bridge/*.png
classic.big_transport_bridgedir = $(datadir)/map-icons/classic.big/transport/bridge

classic.big_transport_track_DATA =
classic.big_transport_trackdir = $(datadir)/map-icons/classic.big/transport/track


nickw_DATA = nickw/*.png
nickwdir = $(datadir)/map-icons/nickw



EXTRA_DIST= \
	$(square.big_DATA) \
	$(square.big_incomming_DATA) \
	$(square.big_sightseeing_DATA) \
	$(square.big_waypoint_DATA) \
	$(square.big_waypoint_wpttemp_DATA) \
	$(square.big_accommodation_DATA) \
	$(square.big_accommodation_hotel_DATA) \
	$(square.big_accommodation_camping_DATA) \
	$(square.big_wlan_DATA) \
	$(square.big_wlan_pay_DATA) \
	$(square.big_geocache_DATA) \
	$(square.big_geocache_geocache_multi_DATA) \
	$(square.big_health_DATA) \
	$(square.big_money_DATA) \
	$(square.big_money_atm_DATA) \
	$(square.big_money_bank_DATA) \
	$(square.big_nautical_DATA) \
	$(square.big_food_DATA) \
	$(square.big_food_restaurant_DATA) \
	$(square.big_food_fastfood_DATA) \
	$(square.big_food_machine_DATA) \
	$(square.big_food_snacks_DATA) \
	$(square.big_recreation_DATA) \
	$(square.big_sports_DATA) \
	$(square.big_misc_DATA) \
	$(square.big_misc_landmark_DATA) \
	$(square.big_misc_landmark_power_DATA) \
	$(square.big_places_DATA) \
	$(square.big_places_settlement_DATA) \
	$(square.big_vehicle_DATA) \
	$(square.big_vehicle_car_rental_DATA) \
	$(square.big_vehicle_parking_DATA) \
	$(square.big_vehicle_restrictions_DATA) \
	$(square.big_vehicle_restrictions_speed_DATA) \
	$(square.big_vehicle_fuel_station_DATA) \
	$(square.big_education_DATA) \
	$(square.big_education_school_DATA) \
	$(square.big_shopping_DATA) \
	$(square.big_shopping_furniture_DATA) \
	$(square.big_shopping_groceries_DATA) \
	$(square.big_shopping_sports_DATA) \
	$(square.big_shopping_vehicle_DATA) \
	$(square.big_shopping_machine_DATA) \
	$(square.big_shopping_clothing_DATA) \
	$(square.big_shopping_supermarket_DATA) \
	$(square.big_shopping_media_DATA) \
	$(square.big_shopping_diy_store_DATA) \
	$(square.big_shopping_rental_DATA) \
	$(square.big_shopping_games_DATA) \
	$(square.big_public_DATA) \
	$(square.big_public_inspecting_authority_DATA) \
	$(square.big_public_recycling_DATA) \
	$(square.big_public_recycling_container_DATA) \
	$(square.big_public_administration_DATA) \
	$(square.big_people_DATA) \
	$(square.big_people_friendsd_DATA) \
	$(square.big_people_developer_DATA) \
	$(square.big_religion_DATA) \
	$(square.big_religion_church_DATA) \
	$(square.big_transport_DATA) \
	$(square.big_transport_ferry_DATA) \
	$(square.big_transport_bridge_DATA) \
	$(square.big_transport_track_DATA) \
	$(square.small_DATA) \
	$(square.small_incomming_DATA) \
	$(square.small_sightseeing_DATA) \
	$(square.small_waypoint_DATA) \
	$(square.small_waypoint_wpttemp_DATA) \
	$(square.small_accommodation_DATA) \
	$(square.small_accommodation_hotel_DATA) \
	$(square.small_accommodation_camping_DATA) \
	$(square.small_wlan_DATA) \
	$(square.small_wlan_pay_DATA) \
	$(square.small_geocache_DATA) \
	$(square.small_geocache_geocache_multi_DATA) \
	$(square.small_health_DATA) \
	$(square.small_money_DATA) \
	$(square.small_money_atm_DATA) \
	$(square.small_money_bank_DATA) \
	$(square.small_nautical_DATA) \
	$(square.small_food_DATA) \
	$(square.small_food_restaurant_DATA) \
	$(square.small_food_fastfood_DATA) \
	$(square.small_food_machine_DATA) \
	$(square.small_food_snacks_DATA) \
	$(square.small_recreation_DATA) \
	$(square.small_sports_DATA) \
	$(square.small_misc_DATA) \
	$(square.small_misc_landmark_DATA) \
	$(square.small_misc_landmark_power_DATA) \
	$(square.small_places_DATA) \
	$(square.small_places_settlement_DATA) \
	$(square.small_vehicle_DATA) \
	$(square.small_vehicle_car_rental_DATA) \
	$(square.small_vehicle_parking_DATA) \
	$(square.small_vehicle_restrictions_DATA) \
	$(square.small_vehicle_restrictions_speed_DATA) \
	$(square.small_vehicle_fuel_station_DATA) \
	$(square.small_education_DATA) \
	$(square.small_education_school_DATA) \
	$(square.small_shopping_DATA) \
	$(square.small_shopping_furniture_DATA) \
	$(square.small_shopping_groceries_DATA) \
	$(square.small_shopping_sports_DATA) \
	$(square.small_shopping_vehicle_DATA) \
	$(square.small_shopping_machine_DATA) \
	$(square.small_shopping_supermarket_DATA) \
	$(square.small_shopping_media_DATA) \
	$(square.small_shopping_diy_store_DATA) \
	$(square.small_shopping_rental_DATA) \
	$(square.small_shopping_games_DATA) \
	$(square.small_public_DATA) \
	$(square.small_public_inspecting_authority_DATA) \
	$(square.small_public_recycling_DATA) \
	$(square.small_public_recycling_container_DATA) \
	$(square.small_public_administration_DATA) \
	$(square.small_people_DATA) \
	$(square.small_people_friendsd_DATA) \
	$(square.small_people_developer_DATA) \
	$(square.small_religion_DATA) \
	$(square.small_religion_church_DATA) \
	$(square.small_transport_DATA) \
	$(square.small_transport_ferry_DATA) \
	$(square.small_transport_bridge_DATA) \
	$(square.small_transport_track_DATA) \
	$(svg_DATA) \
	$(svg_incomming_DATA) \
	$(svg_sightseeing_DATA) \
	$(svg_waypoint_DATA) \
	$(svg_accommodation_DATA) \
	$(svg_accommodation_camping_DATA) \
	$(svg_wlan_DATA) \
	$(svg_geocache_DATA) \
	$(svg_health_DATA) \
	$(svg_money_DATA) \
	$(svg_nautical_DATA) \
	$(svg_food_DATA) \
	$(svg_recreation_DATA) \
	$(svg_sports_DATA) \
	$(svg_misc_DATA) \
	$(svg_misc_landmark_DATA) \
	$(svg_places_DATA) \
	$(svg_vehicle_DATA) \
	$(svg_vehicle_restrictions_DATA) \
	$(svg_vehicle_restrictions_speed_DATA) \
	$(svg_education_DATA) \
	$(svg_education_school_DATA) \
	$(svg_shopping_DATA) \
	$(svg_shopping_rental_DATA) \
	$(svg_public_DATA) \
	$(svg_public_recycling_DATA) \
	$(svg_people_DATA) \
	$(svg_religion_DATA) \
	$(svg_religion_church_DATA) \
	$(svg_transport_DATA) \
	$(svg_transport_bridge_DATA) \
	$(japan_DATA) \
	$(japan_incomming_DATA) \
	$(japan_sightseeing_DATA) \
	$(japan_waypoint_DATA) \
	$(japan_accommodation_DATA) \
	$(japan_wlan_DATA) \
	$(japan_accomodation_DATA) \
	$(japan_geocache_DATA) \
	$(japan_health_DATA) \
	$(japan_money_DATA) \
	$(japan_nautical_DATA) \
	$(japan_food_DATA) \
	$(japan_recreation_DATA) \
	$(japan_sports_DATA) \
	$(japan_misc_DATA) \
	$(japan_misc_landmark_DATA) \
	$(japan_places_DATA) \
	$(japan_vehicle_DATA) \
	$(japan_education_DATA) \
	$(japan_education_school_DATA) \
	$(japan_shopping_DATA) \
	$(japan_shopping_rental_DATA) \
	$(japan_public_DATA) \
	$(japan_public_administration_DATA) \
	$(japan_people_DATA) \
	$(japan_religion_DATA) \
	$(japan_transport_DATA) \
	$(japan_transport_ferry_DATA) \
	$(classic.small_DATA) \
	$(classic.small_incomming_DATA) \
	$(classic.small_sightseeing_DATA) \
	$(classic.small_waypoint_DATA) \
	$(classic.small_waypoint_wpttemp_DATA) \
	$(classic.small_accommodation_DATA) \
	$(classic.small_accommodation_camping_DATA) \
	$(classic.small_wlan_DATA) \
	$(classic.small_wlan_pay_DATA) \
	$(classic.small_geocache_DATA) \
	$(classic.small_health_DATA) \
	$(classic.small_money_DATA) \
	$(classic.small_money_bank_DATA) \
	$(classic.small_nautical_DATA) \
	$(classic.small_food_DATA) \
	$(classic.small_food_restaurant_DATA) \
	$(classic.small_food_fastfood_DATA) \
	$(classic.small_food_snacks_DATA) \
	$(classic.small_recreation_DATA) \
	$(classic.small_sports_DATA) \
	$(classic.small_misc_DATA) \
	$(classic.small_misc_landmark_DATA) \
	$(classic.small_misc_landmark_power_DATA) \
	$(classic.small_misc_information_DATA) \
	$(classic.small_places_DATA) \
	$(classic.small_places_settlement_DATA) \
	$(classic.small_vehicle_DATA) \
	$(classic.small_vehicle_shield_DATA) \
	$(classic.small_vehicle_car_rental_DATA) \
	$(classic.small_vehicle_parking_DATA) \
	$(classic.small_vehicle_restrictions_DATA) \
	$(classic.small_vehicle_restrictions_speed_DATA) \
	$(classic.small_vehicle_fuel_station_DATA) \
	$(classic.small_education_DATA) \
	$(classic.small_education_school_DATA) \
	$(classic.small_shopping_DATA) \
	$(classic.small_shopping_groceries_DATA) \
	$(classic.small_shopping_supermarket_DATA) \
	$(classic.small_shopping_rental_DATA) \
	$(classic.small_public_DATA) \
	$(classic.small_public_recycling_DATA) \
	$(classic.small_public_administration_DATA) \
	$(classic.small_people_DATA) \
	$(classic.small_religion_DATA) \
	$(classic.small_religion_church_DATA) \
	$(classic.small_transport_DATA) \
	$(classic.small_transport_ferry_DATA) \
	$(classic.small_transport_bridge_DATA) \
	$(classic.small_transport_track_DATA) \
	$(classic.big_DATA) \
	$(classic.big_incomming_DATA) \
	$(classic.big_sightseeing_DATA) \
	$(classic.big_waypoint_DATA) \
	$(classic.big_waypoint_wpttemp_DATA) \
	$(classic.big_accommodation_DATA) \
	$(classic.big_accommodation_camping_DATA) \
	$(classic.big_wlan_DATA) \
	$(classic.big_wlan_pay_DATA) \
	$(classic.big_geocache_DATA) \
	$(classic.big_health_DATA) \
	$(classic.big_money_DATA) \
	$(classic.big_money_bank_DATA) \
	$(classic.big_nautical_DATA) \
	$(classic.big_food_DATA) \
	$(classic.big_food_restaurant_DATA) \
	$(classic.big_food_fastfood_DATA) \
	$(classic.big_food_snacks_DATA) \
	$(classic.big_recreation_DATA) \
	$(classic.big_sports_DATA) \
	$(classic.big_misc_DATA) \
	$(classic.big_misc_landmark_DATA) \
	$(classic.big_misc_landmark_power_DATA) \
	$(classic.big_misc_information_DATA) \
	$(classic.big_places_DATA) \
	$(classic.big_places_settlement_DATA) \
	$(classic.big_vehicle_DATA) \
	$(classic.big_vehicle_car_rental_DATA) \
	$(classic.big_vehicle_parking_DATA) \
	$(classic.big_vehicle_restrictions_DATA) \
	$(classic.big_vehicle_restrictions_speed_DATA) \
	$(classic.big_vehicle_fuel_station_DATA) \
	$(classic.big_education_DATA) \
	$(classic.big_education_school_DATA) \
	$(classic.big_shopping_DATA) \
	$(classic.big_shopping_groceries_DATA) \
	$(classic.big_shopping_supermarket_DATA) \
	$(classic.big_shopping_rental_DATA) \
	$(classic.big_public_DATA) \
	$(classic.big_public_recycling_DATA) \
	$(classic.big_public_administration_DATA) \
	$(classic.big_people_DATA) \
	$(classic.big_religion_DATA) \
	$(classic.big_religion_church_DATA) \
	$(classic.big_transport_DATA) \
	$(classic.big_transport_ferry_DATA) \
	$(classic.big_transport_bridge_DATA) \
	$(classic.big_transport_track_DATA) \
	$(nickw_DATA) \
	CMakeLists.txt \
	overview.de.html \
	overview.en.html \
	README.icons \
	update_icons.pl \
	create_makefile.sh
